# c-playground

./: .gitignore  README.md
gen-passwd/: CMakeLists.txt  README.md
gen-passwd/src/: CMakeLists.txt  main.c
loadavg/: CMakeLists.txt  README.md
loadavg/src/: CMakeLists.txt  main.c
monitor-battery/: CMakeLists.txt  README.md
monitor-battery/src/: CMakeLists.txt  main.c  monitor-battery.h.in
monitor-temp/: CMakeLists.txt
monitor-temp/src/: CMakeLists.txt  helpers.c  helpers.h  main.c  monitor-temp.h.in
ncurses/: CMakeLists.txt  README.md
ncurses/cmake/modules/: nCursesPlaygroundCompileFlags.cmake
ncurses/src/: CMakeLists.txt  common.h  ncurses-playground.h.in
ncurses/src/attrib-demo/: CMakeLists.txt  main.c
ncurses/src/cascade/: CMakeLists.txt  main.c
ncurses/src/hello-world/: CMakeLists.txt  main.c
ncurses/src/password-prompt/: CMakeLists.txt  main.c
ncurses/src/print-bold/: CMakeLists.txt  main.c
ncurses/src/windowing/: CMakeLists.txt  main.c
sway-keyboard-layout/: CMakeLists.txt
sway-keyboard-layout/src/: CMakeLists.txt  ipc.c  ipc.h  main.c
x11-xkb-layout/: CMakeLists.txt  README.md
x11-xkb-layout/src/: CMakeLists.txt  main.c
xcb-xkb-layout/: CMakeLists.txt  README.md
xcb-xkb-layout/src/: CMakeLists.txt  main.c
